Add line terminations

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,10 @@ script:
 
 after_success:
   - if [[ "$TRAVIS_BRANCH" == "master" ]]; then
-      docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-      docker tag debuggery rameezk/debuggery:latest
-      docker push rameezk/debuggery:latest
+      docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD;
+      docker tag debuggery rameezk/debuggery:latest;
+      docker push rameezk/debuggery:latest;
+      echo "Pushed";
     fi
 
 notifications:
